@@ -53,6 +53,7 @@ namespace LHAPDF {
     static Info& config() {
       static Info _cfg;
       string confpath = findFile("lhapdf.conf").native();
+      // cout << "CONFPATH = " << confpath.empty() << endl;
       if (!confpath.empty()) _cfg.load(confpath);
       return _cfg;
     }
